code done for hw4

--- a/hw4/Makefile
+++ b/hw4/Makefile
@@ -3,14 +3,18 @@
 # Variables
 PYTHON = python3
 SCRIPT = hw4.py
+PIP = pip3
 
 # Targets
-.PHONY: all run clean
+.PHONY: all run clean requirements
 
-all: run
+all: requirements run
 
 run:
 	$(PYTHON) $(SCRIPT)
+
+requirements:
+	$(PIP) install matplotlib
 
 clean:
 	rm -f *.pyc
